--- a/learning/courses/utility-scale-quantum-computing/hardware.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/hardware.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This course is based on a live course delivered at the University of Tokyo.\n",
     "\n",
-    "This lesson's lecture pdf was split into two parts. [Download part 1](https://ibm.box.com/shared/static/ruz8wf353hncenmaywjlfjilflaumnzt.zip) and [download part 2](https://ibm.box.com/shared/static/tg8vv00ern2bmxmm033xt9oe0fcvwamc.zip). Note that some code snippets may become deprecated since these are static images.\n",
+    "This lesson's lecture pdf was split into two parts. [Download part 1](https://ibm.box.com/shared/static/ruz8wf353hncenmaywjlfjilflaumnzt.zip) and [download part 2](https://ibm.box.com/shared/static/tg8vv00ern2bmxmm033xt9oe0fcvwamc.zip). Note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "</Admonition>"
    ]
