--- a/learning/courses/utility-scale-quantum-computing/quantum-simulation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-simulation.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Yukio Kawashima (May 30, 2024)\n",
     "\n",
-    "[Download the pdf](https://ibm.box.com/s/kzzsmxhw38vph1ioohczaet53euwi310) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/s/kzzsmxhw38vph1ioohczaet53euwi310) of the original lecture. Note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 7 seconds.*\n",
     "\n",
@@ -60,7 +60,7 @@
     "e^{-i (H_1+H_2) t} \\approx 1-i(H_1+H_2)t \\approx (1-i H_1 t)(1-i H_2 t) \\approx e^{-i H_1 t}e^{-i H_2 t}\n",
     "$$\n",
     "\n",
-    "Of course, we may need to evolve our state for a longer time. That is accomplished by using many such small steps in time. This process is called Trotterization:\n",
+    "Of course, we might need to evolve our state for a longer time. That is accomplished by using many such small steps in time. This process is called Trotterization:\n",
     "\n",
     "$$\n",
     "\\vert \\psi(t) \\rangle \\approx \\left(\\prod_j e^{-i a_j P_j t/r} \\right)^r \\vert\\psi(0) \\rangle \\text{,}\n",
@@ -113,7 +113,7 @@
    "source": [
     "### 1.2 Import the libraries\n",
     "\n",
-    "Note that some libraries that may be useful (MatrixExponential, QDrift) are included even though they are not used in this current notebook. You can try them out if you have time!"
+    "Note that some libraries that might be useful (MatrixExponential, QDrift) are included even though they are not used in this current notebook. You can try them out if you have time!"
    ]
   },
   {
