--- a/learning/courses/utility-scale-quantum-computing/utility-ii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-ii.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Yukio Kawashima (12 July 2024)\n",
     "\n",
-    "[Download the pdf](https://ibm.box.com/s/bipgoms7gr6b6vhkoc1uw6oi4wsanfoq) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/s/bipgoms7gr6b6vhkoc1uw6oi4wsanfoq) of the original lecture. Note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 2 m 30 s.*\n",
     "\n",
@@ -61,7 +61,7 @@
     "e^{-i (H_1+H_2) t} \\approx 1-i(H_1+H_2)t \\approx (1-i H_1 t)(1-i H_2 t) \\approx e^{-i H_1 t}e^{-i H_2 t}\n",
     "$$\n",
     "\n",
-    "Of course, we may need to evolve our state for a longer time. That is accomplished by using many such small steps in time. This process is called Trotterization:\n",
+    "Of course, we might need to evolve our state for a longer time. That is accomplished by using many such small steps in time. This process is called Trotterization:\n",
     "\n",
     "$$\n",
     "\\vert \\psi(t) \\rangle \\approx \\left(\\prod_j e^{-i a_j P_j t/r} \\right)^r \\vert\\psi(0) \\rangle \\text{,}\n",
@@ -895,7 +895,7 @@
    "id": "ba36b8f4-9fae-4151-b3fa-8f848eb77a0d",
    "metadata": {},
    "source": [
-    "We transpile the circuits and gather them in a list. This may take a few minutes."
+    "We transpile the circuits and gather them in a list. This might take a few minutes."
    ]
   },
   {
@@ -1152,7 +1152,7 @@
     "\n",
     "###  3.2 Step 2. Optimize for target hardware\n",
     "\n",
-    "Transpile the circuits and gather them in a list. Once again, this may take a few minutes."
+    "Transpile the circuits and gather them in a list. Once again, this might take a few minutes."
    ]
   },
   {
