--- a/learning/courses/utility-scale-quantum-computing/utility-iii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-iii.ipynb
@@ -11,11 +11,11 @@
     "\n",
     "Toshinari Itoko, Tamiya Onodera, Kifumi Numata (19 July 2024)\n",
     "\n",
-    "[Download the pdf](https://ibm.box.com/shared/static/fw1538dogvyv0qbfqg8tan1k2fs27mfv.zip) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/shared/static/fw1538dogvyv0qbfqg8tan1k2fs27mfv.zip) of the original lecture. Note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this first experiment is 12 m 30 s. There is an additional experiment below that requires approximately 4 m.*\n",
     "\n",
-    "(Note: this notebook may not evaluate in the time allowed on the Open Plan. Please use quantum computing resources wisely.)\n",
+    "(Note: this notebook might not evaluate in the time allowed on the Open Plan. Please use quantum computing resources wisely.)\n",
     "\n",
     "</Admonition>"
    ]
@@ -952,7 +952,7 @@
     "g = backend.coupling_map.graph.copy().to_undirected()\n",
     "g.remove_edges_from(\n",
     "    bad_ecrgate_edges\n",
-    ")  # remove edge first (otherwise may fail with a NoEdgeBetweenNodes error)\n",
+    ")  # remove edge first (otherwise might fail with a NoEdgeBetweenNodes error)\n",
     "g.remove_nodes_from(bad_readout_qubits)"
    ]
   },
@@ -2124,7 +2124,7 @@
     "g = backend.coupling_map.graph.copy().to_undirected()\n",
     "g.remove_edges_from(\n",
     "    bad_czgate_edges\n",
-    ")  # remove edge first (otherwise may fail with a NoEdgeBetweenNodes error)\n",
+    ")  # remove edge first (otherwise might fail with a NoEdgeBetweenNodes error)\n",
     "g.remove_nodes_from(bad_readout_qubits)"
    ]
   },
