--- a/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
@@ -11,11 +11,11 @@
     "\n",
     "Takashi Imamichi (24 May 2024)\n",
     "\n",
-    "[Download the pdf](https://ibm.box.com/s/blnffu0pd7yzxarq3zc3w0jv90365ny2) of the original lecture. Note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/s/blnffu0pd7yzxarq3zc3w0jv90365ny2) of the original lecture. Note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 9 minutes (tested on ibm_brisbane).*\n",
     "\n",
-    "(this notebook may not evaluate in the time allowed on the Open Plan. Please use quantum computing resources wisely.)\n",
+    "(this notebook might not evaluate in the time allowed on the Open Plan. Please use quantum computing resources wisely.)\n",
     "\n",
     "</Admonition>"
    ]
@@ -115,7 +115,7 @@
    "id": "0a001e71",
    "metadata": {},
    "source": [
-    "It is easy to obtain the eigenvalues classically, so we can check our work. This may become difficult as we scale toward utility. Here we use numpy."
+    "It is easy to obtain the eigenvalues classically, so we can check our work. This might become difficult as we scale toward utility. Here we use numpy."
    ]
   },
   {
@@ -1407,7 +1407,7 @@
     "\n",
     "The Qiskit library offers a series of **transpilation passes** that cater to a wide range of circuit transformations. You need to make sure that your circuit is **optimized** for your purpose.\n",
     "\n",
-    "Transpilation may involves several steps, such as:\n",
+    "Transpilation might involves several steps, such as:\n",
     "\n",
     "* **Initial mapping** of the qubits in the circuit (such as decision variables) to physical qubits on the device.\n",
     "* **Unrolling** of the instructions in the quantum circuit to the hardware-native instructions that the backend understands.\n",
