--- a/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Kifumi Numata (19 Apr 2024)\n",
     "\n",
-    "Click [here](https://ibm.box.com/shared/static/vee9e1kkxxiih5g8yqdhoo6t0o3dw7xf.zip) to download the pdf of the original lecture. Please note that some code snippets may become deprecated since these are static images.\n",
+    "Click [here](https://ibm.box.com/shared/static/vee9e1kkxxiih5g8yqdhoo6t0o3dw7xf.zip) to download the pdf of the original lecture. Please note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 5 seconds.*\n",
     "\n",
@@ -402,7 +402,7 @@
    "source": [
     "#### $|-\\rangle$ state\n",
     "\n",
-    "You may have guessed that there is a corresponding  $|-\\rangle$ state:\n",
+    "You might have guessed that there is a corresponding  $|-\\rangle$ state:\n",
     "$$\n",
     "|-\\rangle \\equiv \\frac{|0\\rangle -|1\\rangle}{\\sqrt{2}}.\n",
     "$$\n",
@@ -1642,7 +1642,7 @@
    "id": "aa8c88f1-d1ec-43c8-aafe-c9ab7cbb6dc2",
    "metadata": {},
    "source": [
-    "Execution on the real device may require waiting in a queue, since quantum computers are valuable resources, and very much in demand. The job_id is used to check the execution status and results of the job later."
+    "Execution on the real device might require waiting in a queue, since quantum computers are valuable resources, and very much in demand. The job_id is used to check the execution status and results of the job later."
    ]
   },
   {
