--- a/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/bits-gates-and-circuits.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Kifumi Numata (19 Apr 2024)\n",
     "\n",
-    "Click [here](https://ibm.box.com/shared/static/vee9e1kkxxiih5g8yqdhoo6t0o3dw7xf.zip) to download the pdf of the original lecture. Please note that some code snippets might become deprecated since these are static images.\n",
+    "Click [here](https://ibm.box.com/shared/static/vee9e1kkxxiih5g8yqdhoo6t0o3dw7xf.zip) to download the pdf of the original lecture. Note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 5 seconds.*\n",
     "\n",
