Dedicated Service rename (#3427)
Changing to On-Prem.

Wait to merge till we've received notification that changes are live on
the web/UI

--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -57,9 +57,9 @@ Run quantum circuits on the world's best QPUs using an enterprise quantum time s
 
 This plan is recommended for those who want to execute a strategic quantum roadmap and develop quantum algorithms and applications at scale. [Contact IBM](https://www.ibm.com/account/reg/us-en/signup?formid=MAIL-quantum) to learn more.
 
-## Dedicated Service
+## On-Prem Plan
 
-Access an entirely dedicated quantum system that is serviced and maintained by IBM Quantum.
+Access an entirely dedicated on-premises quantum system that is serviced and maintained by IBM Quantum.
 
 This service is recommended for those who are exploring classical quantum algorithms and applications and need high control over their resources and data. [Contact IBM](https://www.ibm.com/account/reg/us-en/signup?formid=MAIL-quantum) to learn more.
 
