--- a/learning/courses/utility-scale-quantum-computing/quantum-phase-estimation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-phase-estimation.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This notebook provides the fundamental concepts and implementation of the Quantum Fourier Transformation (QFT) and Quantum Phase Estimation (QPE).\n",
     "\n",
-    "PDFs of lecture notes will be available soon. Note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/shared/static/srgnll6u8ame7gk186pkthq7erc7l6rw.zip) of the original lecture. Note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 7 seconds.*\n",
     "\n",
@@ -211,7 +211,7 @@
    "source": [
     "### 2.4 Example: Circuit construction of 3 qubits QFT\n",
     "\n",
-    "From the above description, it may not be clear how to construct a QFT circuit. For now, simply note that we expect three qubits to have phases that evolve at different \"rates\". Understand exactly how this is translated into a circuit is left as an exercise to the reader. There are multiple diagrams and examples in the lecture pdf. Additional resources include [this lesson](/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction) from the Fundamentals of quantum algorithms course.\n",
+    "From the above description, it might not be clear how to construct a QFT circuit. For now, simply note that we expect three qubits to have phases that evolve at different \"rates\". Understand exactly how this is translated into a circuit is left as an exercise to the reader. There are multiple diagrams and examples in the lecture pdf. Additional resources include [this lesson](/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/introduction) from the Fundamentals of quantum algorithms course.\n",
     "\n",
     "We will demonstrate QFT using simulators only, and thus we will not use the Qiskit patterns framework until we move on to quantum phase estimation."
    ]
