--- a/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
+++ b/learning/courses/quantum-machine-learning/classical-ml-review.ipynb
@@ -5,7 +5,7 @@
    "id": "8edaa485-a3f1-4c9f-802a-339b59920b40",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore QRAM autoencoders Perez Barto Mehryar Mohri Afshin Rostamizadeh Ameet Talwalkar Pérez */}\n",
+    "{/* cspell:ignore VQCs QRAM autoencoders Perez Barto Mehryar Mohri Afshin Rostamizadeh Ameet Talwalkar Pérez */}\n",
     "\n",
     "# Review of relevant machine learning methods\n",
     "\n",
@@ -92,8 +92,12 @@
     "\n",
     "Recall the primal and dual formulations of our linear boundary model:\n",
     "\n",
-    "$$f_1(\\vec{x}) = \\Theta^T \\Phi(\\vec{x})+b$$\n",
-    "$$f_2(\\vec{x}) = \\sum_{i=1}^n \\alpha_i y_i \\Phi^T(\\vec{x}_i)\\Phi(\\vec{x})+b$$\n",
+    "$$\n",
+    "f_1(\\vec{x}) = \\Theta^T \\Phi(\\vec{x})+b\n",
+    "$$\n",
+    "$$\n",
+    "f_2(\\vec{x}) = \\sum_{i=1}^n \\alpha_i y_i \\Phi^T(\\vec{x}_i)\\Phi(\\vec{x})+b\n",
+    "$$\n",
     "\n",
     "Now that we know that using a feature map to get to a higher dimensional space can allow us to successfully find a separating hyperplane, we can replace the original feature vector $\\vec{x}$ in the equations with the feature-mapped vectors. However, if we do this in the primal formulation, we encounter the problem of having to compute the inner products between the parameters and a potentially very high dimensional feature map. However, in the dual formulation, we see that these are replaced with inner products between feature mapped vectors of different inputs.\n",
     "\n",
@@ -111,7 +115,7 @@
     "\n",
     "Quantum computers, or quantum states in general, allow for a very natural definition of “quantum kernel”. We can interpret the encoding of an input $\\vec{x}$ into a quantum state $|\\Phi(\\vec{x})\\rangle$ as a feature map. This process may indeed map the data into a very high-dimensional space as is common in classical feature maps, but the dimensionality will depend on the encoding method (see the Data Encoding lesson). Recall that the inner product of two quantum states $\\langle \\psi | \\phi \\rangle$ is related to the probability of measuring the state $|\\phi\\rangle$ when in the state $|\\psi\\rangle$. We can estimate the inner product of the two mapped data points $\\vec{\\Phi}(\\vec{x}_i)$ and $\\vec{\\Phi}(\\vec{x}_j)$ by making sufficiently many measurements of the resulting circuit.\n",
     "\n",
-    "![An abstract representation of a kernal as a circuit.](/learning/images/courses/quantum-machine-learning/classical-ml-review/classical-review-background-kernel-circuit.avif)\n",
+    "![An abstract representation of a kernel as a circuit.](/learning/images/courses/quantum-machine-learning/classical-ml-review/classical-review-background-kernel-circuit.avif)\n",
     "\n",
     "As we will see later in the course, we can use measurements on a quantum circuit like the one shown above to estimate a kernel, and we can then run SVM optimization classically on the kernel matrix to learn the tunable parameters."
    ]
