--- a/learning/courses/utility-scale-quantum-computing/error-mitigation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/error-mitigation.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Toshinari Itoko (28 June 2024)\n",
     "\n",
-    "PDFs of lecture notes will be available soon. Note that some code snippets may become deprecated since these are static images.\n",
+    "[Download the pdf](https://ibm.box.com/shared/static/a0zgies7bh91hm2lwev9o0bfeybxc6n6.zip) of the original lecture. Note that some code snippets might become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 1 m 40 s.*\n",
     "\n",
