--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -6,12 +6,15 @@ description: Browse tutorials on workflows toward advantage or Qiskit capabiliti
 # Tutorials
 
 Use these tutorials to learn how to apply Qiskit to common quantum computing use cases. 
-- The section on workflows toward advantage contains end-to-end examples of using a quantum computer to solve real-world problems. These tutorials focus on algorithms that are promising candidates for achieving computational advantage by a quantum computer over a classical computer. 
-- The section on Qiskit capabilities contains examples that use the latest and most advanced techniques in the Qiskit ecosystem to improve part or the whole of a particular workflow.
+
+- Start with the set of tutorials in the [Get started](#get-started) section if it is your first time running code on a quantum computer.
+- The section on [workflows toward advantage](#explore-workflows-toward-advantage) contains end-to-end examples of using a quantum computer to solve real-world problems. These tutorials focus on algorithms that are promising candidates for achieving computational advantage by a quantum computer over a classical computer. 
+- The section on [Qiskit capabilities](#leverage-qiskit-capabilities) contains examples that use the latest and most advanced techniques in the Qiskit ecosystem to improve part or the whole of a particular workflow.
 
 ## Get started
 
-* Overview
+These tutorials are for beginners who are ready to explore running quantum algorithms on a quantum computer.
+
 * [Hello world](/docs/tutorials/hello-world)
 * [Variational quantum eigensolver](/docs/tutorials/variational-quantum-eigensolver)
 * [CHSH inequality](/docs/tutorials/chsh-inequality)
@@ -92,18 +95,24 @@ Workload optimization focuses on either efficient orchestration of classical and
 <details>
 <summary>**Qiskit Functions**</summary>
 
-* [Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum](/docs/tutorials/global-data-quantum-optimizer)
+Qiskit Functions are a collection of pre-packaged error management and application tools, making it easy to design large-scale experiments with circuits, molecules, QUBOs, and more.
 
 
-* [Error mitigation with the IBM Circuit function](/docs/tutorials/error-mitigation-with-qiskit-functions)
+- Design new algorithms with **Circuit functions** -- with pre-built transpilation, error suppression, and error mitigation pipelines.
 
-* [Higher-order binary optimization with Q-CTRL's Optimization Solver](/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver)
+  * [Error mitigation with the IBM Circuit function](/docs/tutorials/error-mitigation-with-qiskit-functions)
 
-* [Model a flowing non-viscous fluid using QUICK-PDE](/docs/tutorials/colibritd-pde)
+- Experiment domain-specific problems with Application functions -- with familiar inputs and outputs to classical solvers.
 
-* [Compute dissociation curves for strong coupling systems with QunaSys QSCI](/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci)
+  * [Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum](/docs/tutorials/global-data-quantum-optimizer)
 
-* [Dissociation PES curves with Qunova HiVQE](/docs/tutorials/qunova-hivqe)
+  * [Higher-order binary optimization with Q-CTRL's Optimization Solver](/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver)
+
+  * [Model a flowing non-viscous fluid using QUICK-PDE](/docs/tutorials/colibritd-pde)
+
+  * [Compute dissociation curves for strong coupling systems with QunaSys QSCI](/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci)
+
+  * [Dissociation PES curves with Qunova HiVQE](/docs/tutorials/qunova-hivqe)
 
 </details>
 
