--- a/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore DMRG textrm varepsilon vecs pqrs ijkl */}\n",
     "\n",
-    "# Sample-based quantum diagonalization of a fermionic lattice model\n",
+    "# Sample-based Krylov quantum diagonalization of a fermionic lattice model\n",
     "\n",
     "*Usage estimate: 9 seconds on IBM Aachen (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
@@ -771,7 +771,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Sample-based quantum diagonalization of a fermionic lattice model"
+  "title": "Sample-based Krylov quantum diagonalization of a fermionic lattice model"
  },
  "nbformat": 4,
  "nbformat_minor": 4
