update next steps

--- a/docs/tutorials/hello-world.ipynb
+++ b/docs/tutorials/hello-world.ipynb
@@ -686,7 +686,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  -   Learn how to [build circuits](/docs/guides/map-problem-to-circuits) in more detail.\n",
-    "  -   Try a [tutorial](https://learning.quantum.ibm.com/catalog/tutorials) in IBM Quantum Learning.\n",
+    "  -   Try the [Variational quantum eigensolver](/docs/tutorials/variational-quantum-eigensolver) tutorial.\n",
     "</Admonition>"
    ]
   }
