--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -97,12 +97,11 @@ Workload optimization focuses on either efficient orchestration of classical and
 
 Qiskit Functions are a collection of pre-packaged error management and application tools, making it easy to design large-scale experiments with circuits, molecules, QUBOs, and more.
 
-
 - Design new algorithms with **Circuit functions** -- with pre-built transpilation, error suppression, and error mitigation pipelines.
 
   * [Error mitigation with the IBM Circuit function](/docs/tutorials/error-mitigation-with-qiskit-functions)
 
-- Experiment domain-specific problems with **Application functions** -- with familiar inputs and outputs to classical solvers.
+- Experiment with domain-specific problems with **Application functions** -- with familiar inputs and outputs to classical solvers.
 
   * [Quantum Portfolio Optimizer - A Qiskit Function by Global Data Quantum](/docs/tutorials/global-data-quantum-optimizer)
 
