Natalie asked me to update hero images

--- a/learning/courses/quantum-safe-cryptography/index.mdx
+++ b/learning/courses/quantum-safe-cryptography/index.mdx
@@ -5,7 +5,7 @@ description: Practical introduction to quantum-safe cryptography, and how quantu
 
 # Overview
 
-!["Hero image"](/learning/images/courses/quantum-safe-cryptography/Quantum-Safe-Cryptography_V1_Illustration.svg)
+!["Hero image"](/learning/images/courses/quantum-safe-cryptography/hero.avif)
 
 
 A practical introduction to quantum-safe cryptography is a free online course in  IBM Quantum&reg; Learning and serves as a primer on the foundational concepts in quantum-safe cryptography.
