--- a/learning/courses/quantum-business-foundations/index.mdx
+++ b/learning/courses/quantum-business-foundations/index.mdx
@@ -5,7 +5,7 @@ description: A free IBM course on building a foundational understanding of quant
 
 # Overview
 
-!["Hero image"](/learning/images/courses/quantum-business-foundations/hero.avif)
+!["Hero image"](/learning/images/courses/quantum-business-foundations/hero.svg)
 
 Designed by IBM Quantum experts, this course covers the essentials of quantum computing and applications for business. Learn about this new computing paradigm, how it works, and its potential to address incredibly complex business problems. Complete the course to earn your IBM Quantum Business Foundations badge.
 
