--- a/learning/modules/computer-science/index.mdx
+++ b/learning/modules/computer-science/index.mdx
@@ -5,6 +5,8 @@ description: This collection of Qiskit modules explores foundational quantum alg
 
 # Overview
 
+!["Hero image"](/learning/images/modules/computer-science/hero.avif)
+
 This collection of Qiskit in-classroom modules is designed for an undergraduate-level course in computer science, quantum computing, or introductory quantum mechanics. The goal is to help educators and students leverage quantum computers to experimentally explore foundational quantum protocols and algorithms, such as quantum teleportation, quantum key distribution (QKD), and the Deutsch-Jozsa and Bernstein-Vazirani algorithms.
 
 Each module should be started in class with group and instructor support, but can be completed independently or in small groups. All activities can be completed in much less time than the free time allotted as part of the Open Plan available to all users. Simulator options are also built-in in case students accidentally exhaust their free quantum computing time.
