--- a/learning/modules/quantum-mechanics/index.mdx
+++ b/learning/modules/quantum-mechanics/index.mdx
@@ -5,6 +5,8 @@ description: This is a collection of stand-alone modules designed for an undergr
 
 # Overview
 
+!["Hero image"](/learning/images/modules/quantum-mechanics/hero.avif)
+
 This collection of Qiskit in classrooms modules is designed to fit into an undergraduate quantum mechanics course. The goal is to help educators and students leverage quantum computers to experimentally explore topics integral to a quantum mechanics course, such as uncertainty and superposition.
 Each module should be started in class with some group and instructor support, but can be completed independently or in small groups. All activities can be completed in much less than the free time allotted as part of the Open Plan available to all users. Simulator options are also built in, just in case students accidentally exhaust their free quantum computing time.
 
