--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "95a715d2",
    "metadata": {},
    "outputs": [],
@@ -135,8 +135,12 @@
     "import qiskit\n",
     "\n",
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
-    "\n",
-    "catalog = QiskitFunctionsCatalog()\n",
+    " \n",
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_cloud\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"IQP_API_TOKEN\",\n",
+    ")\n",
     "\n",
     "qesem_function = catalog.load(\"qedma/qesem\")"
    ]
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2fb4efc4",
    "metadata": {
     "tags": [
@@ -166,7 +170,6 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "instance = service.active_account()[\"instance\"]\n",
     "backend_name = service.least_busy().name"
    ]
   },
@@ -195,8 +198,7 @@
     "    options={\n",
     "        \"estimate_time_only\": \"analytical\",\n",
     "    },\n",
-    "    instance=instance,\n",
-    "    backend_name=backend_name,  # E.g. \"ibm_brisbane\"\n",
+    "    backend_name=backend_name,  # E.g. \"ibm_fez\"\n",
     ")\n",
     "\n",
     "time_estimate_result = time_estimation_job.result()"
@@ -212,15 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e7351d6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_job = qesem_function.run(\n",
     "    pubs=[(circ, [avg_magnetization, other_observable])],\n",
-    "    instance=instance,\n",
-    "    backend_name=backend_name,  # E.g. \"ibm_brisbane\"\n",
+    "    backend_name=backend_name,  # E.g. \"ibm_fez\"\n",
     ")"
    ]
   },
@@ -237,18 +238,10 @@
    "execution_count": null,
    "id": "856fe992",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "QUEUED\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(time_estimation_job.status())\n",
-    "time_estimate_result = time_estimation_job.result()"
+    "print(sample_job.status())\n",
+    "result = sample_job.result()"
    ]
   },
   {
@@ -340,23 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "48821756",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The estimated QPU time for this PUB is: \n",
-      "{'time_estimation_sec': 12600}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\n",
-    "    f\"The estimated QPU time for this PUB is: \\n{time_estimate_result[0].metadata}\"\n",
-    ")"
+    "print(f\"The estimated QPU time for this PUB is: \\n{time_estimate_result[0].metadata}\")"
    ]
   },
   {
@@ -364,7 +346,7 @@
    "id": "a9e51542",
    "metadata": {},
    "source": [
-    "The following code snippet describes how to retrieve the mitigation results (`estimate_time_only` is not set)."
+    "The following code snippet describes how to retrieve the mitigation results and execution metrics (`estimate_time_only` is not set)."
    ]
   },
   {
@@ -372,33 +354,23 @@
    "execution_count": null,
    "id": "fda5f739",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The result of the submitted job had 1 PUB\n",
-      "The expectation values measured from this PUB are: \n",
-      "[0.99055668 0.99574554]\n",
-      "The error-bar values are: \n",
-      "[0.00726429 0.01701808]\n",
-      "Noisy expectation values: \n",
-      "[0.95891429 0.93085714]\n",
-      "Noisy error-bar: \n",
-      "[0.00216361 0.00723197]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result = sample_job.result()\n",
-    "print(f\"The result of the submitted job had {len(result)} PUB\")\n",
-    "print(\n",
-    "    f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\"\n",
-    ")\n",
-    "print(f\"The error-bar values are: \\n{result[0].data.stds}\")\n",
-    "noisy_results = result[0].metadata[\"noisy_results\"]\n",
+    "results = result[0]\n",
+    "print(f\"Mitigated expectation values: \\n{results.data.evs}\")\n",
+    "print(f\"Mitigated error-bar: \\n{results.data.stds}\")\n",
+    "noisy_results = results.metadata['noisy_results']\n",
     "print(f\"Noisy expectation values: \\n{noisy_results.evs}\")\n",
-    "print(f\"Noisy error-bar: \\n{noisy_results.stds}\")"
+    "print(f\"Noisy error-bar: \\n{noisy_results.stds}\")\n",
+    "print(f\"Total QPU time: \\n {results.metadata['total_qpu_time']}\")\n",
+    "print(f\"Gates fidelity measured during the experiment: \\n {results.metadata['gate_fidelities']}\")\n",
+    "print(f\"Total shots / mitigation shots: \\n {results.metadata['total_shots']} / {results.metadata['mitigation_shots']}\")\n",
+    "print(\"Transpiled circuits:\")\n",
+    "for i, circuit in enumerate(results.metadata['transpiled_circs']):\n",
+    "    print(f\"Circuit {i}:\")\n",
+    "    print(f\"  Circuit: \\n {circuit['circuit']}\")\n",
+    "    print(f\"  Qubit mapping: \\n {circuit['qubit_map']}\")\n",
+    "    print(f\"  Measurement bases: \\n {circuit['num_measurement_bases']}\")"
    ]
   },
   {
@@ -484,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.10.11"
   },
   "title": "QESEM - A Qiskit Function by Qedma"
  },
