update docs to new platform

--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -159,11 +159,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2fb4efc4",
-   "metadata": {
-    "tags": [
-     "remove-cell"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This cell is hidden from users\n",
@@ -346,7 +342,7 @@
    "id": "a9e51542",
    "metadata": {},
    "source": [
-    "The following code snippet describes how to retrieve the mitigation results and execution metrics (`estimate_time_only` is not set)."
+    "The following code snippet demonstrates how to retrieve the mitigation results (when `estimate_time_only` is not set) and execution metrics. These contain essential data that enables a deeper understanding of how different parameters impact the QESEM execution. It may also be relevant when writing a paper based on your research."
    ]
   },
   {
