--- a/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
+++ b/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "In this notebook we show the usage of circuit cutting to deal with such a utility scale periodic chain problem where the first and last qubits are not neighbors. Cutting this long range connectivity avoids the extra SWAP gates at the cost of executing multiple instances of the circuit, and some classical postprocessing. In summary, cutting can be incorporated to logically calculate the long distance 2-qubit operations. In other words, this approach leads to an effective increase in the connectivity of the coupling map, thus leading to a fewer number of SWAP gates.\n",
     "\n",
-    "Note that there are two types of cuts - cutting the wire of a circuit (called `wire cutting`), or replacing a 2-qubit gate with multiple single qubit operations (called `gate cutting`). In this notebook, we shall focus on gate cutting. For more details on gate cutting, refer to the <a href=\"https://qiskit.github.io/qiskit-addon-cutting/explanation/index.html\">explanatory materials</a> in `qiskit-addon-cutting`, and the corresponding references. For more details on wire cutting, refer to <a href=\"https://learning.quantum.ibm.com/tutorial/wire-cutting-to-improve-performance\">this notebook</a>, or the tutorials in <a href='https://qiskit.github.io/qiskit-addon-cutting/tutorials/index.html'>qiskit-addon-cutting</a>."
+    "Note that there are two types of cuts - cutting the wire of a circuit (called `wire cutting`), or replacing a 2-qubit gate with multiple single qubit operations (called `gate cutting`). In this notebook, we shall focus on gate cutting. For more details on gate cutting, refer to the <a href=\"https://qiskit.github.io/qiskit-addon-cutting/explanation/index.html\">explanatory materials</a> in `qiskit-addon-cutting`, and the corresponding references. For more details on wire cutting, refer to the [Wire cutting for expectation values estimation](/docs/tutorials/wire-cutting) tutorial, or the tutorials in <a href='https://qiskit.github.io/qiskit-addon-cutting/tutorials/index.html'>qiskit-addon-cutting</a>."
    ]
   },
   {
@@ -298,7 +298,7 @@
    "id": "b7b4970f-ac13-4644-a92f-1796de876767",
    "metadata": {},
    "source": [
-    "TwoLocal circuit allows the repetition of the `rotation_blocks` and the `entangler map` multiple times. For this case, the number of repetitions determine the number of periodic gates that need to be cut. Since the sampling overhead increases exponentially with the number of cuts (refer to <a href=\"https://learning.quantum.ibm.com/tutorial/wire-cutting-to-improve-performance\">this notebook</a> for more details), we shall fix the number of repetitions to 2 in this notebook."
+    "TwoLocal circuit allows the repetition of the `rotation_blocks` and the `entangler map` multiple times. For this case, the number of repetitions determine the number of periodic gates that need to be cut. Since the sampling overhead increases exponentially with the number of cuts (refer to the [Wire cutting for expectation values estimation](/docs/tutorials/wire-cutting) tutorial for more details), we shall fix the number of repetitions to 2 in this notebook."
    ]
   },
   {
