--- a/docs/guides/qiskit-addons-obp.mdx
+++ b/docs/guides/qiskit-addons-obp.mdx
@@ -92,7 +92,7 @@ where $S$ represents the total number of slices and $\mathcal{U}_s$ denotes a si
 <Admonition type="tip" title="Recommendations">
     - [Get started with OBP.](/docs/guides/qiskit-addons-obp-get-started)    
     - Become familiar with the [error mitigation techniques](/docs/guides/error-mitigation-and-suppression-techniques) available in Qiskit Runtime.
-    - Read the tutorial on using [OBP to improve expectation values.](https://learning.quantum.ibm.com/tutorial/improving-estimation-of-expectation-values-with-operator-backpropagation)
+    - Read the tutorial on using [OBP to improve expectation values.](/docs/tutorials/operator-back-propagation)
 </Admonition>
 
 ## References
