--- a/docs/guides/serverless.mdx
+++ b/docs/guides/serverless.mdx
@@ -7,7 +7,7 @@ description: Use Qiskit Serverless to run quantum-classical workloads across the
 
 Qiskit Serverless provides a simple interface to run workloads across quantum-classical resources. This includes deploying programs to the IBM Quantum&reg; Platform and running workloads remotely, as well as easy resource management for multi-cloud and quantum-centric supercomputing use cases.
 
-Premium users can build, deploy, and run their workloads remotely on classical compute made available through IBM Quantum Platform. Try out the tutorials in [IBM Quantum Learning](https://learning.quantum.ibm.com/catalog/tutorials?topics=qiskit-patterns) (note: these are accessible in the Premium Plan once you have logged into your IBM Quantum account).
+Premium users can build, deploy, and run their workloads remotely on classical compute made available through IBM Quantum Platform.
 
 <Admonition type="note">
     This is an experimental feature available only for IBM Quantum Premium Plan users.
@@ -39,6 +39,7 @@ Currently, the IBM Quantum workloads table only reflects Qiskit Runtime workload
 
 <Admonition type="info" title="Recommendations">
 
-Explore how to [write your first Qiskit Serverless program](./serverless-first-program).
+- Explore how to [write your first Qiskit Serverless program](./serverless-first-program).
+- Try out some [tutorials](/docs/tutorials).
 
 </Admonition>
