--- a/docs/guides/simulate-with-qiskit-sdk-primitives.ipynb
+++ b/docs/guides/simulate-with-qiskit-sdk-primitives.ipynb
@@ -10,16 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26c2809e-c8b4-4e25-996e-c41f72723b1b",
-   "metadata": {
-    "tags": [
-     "version-info"
-    ]
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "867f73c6-dd57-4755-9bbd-55ffffe7e09e",
    "metadata": {},
    "source": [
@@ -500,7 +490,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  - For higher-performance simulation that can handle larger circuits, or to incorporate noise models into your simulation, see [Exact and noisy simulation with Qiskit Aer primitives](simulate-with-qiskit-aer).\n",
-    "  - To learn how to use Quantum Composer for simulation, try the [Explore gates and circuits with the Quantum Composer](https://learning.quantum.ibm.com/tutorial/explore-gates-and-circuits-with-the-quantum-composer) tutorial.\n",
+    "  - To learn how to use Quantum Composer for simulation, see the [IBM Quantum Composer](/docs/guides/composer) guide.\n",
     "  - Read the [Qiskit Estimator API](/docs/api/qiskit/1.4/qiskit.primitives.Estimator) reference.\n",
     "  - Read the [Qiskit Sampler API](/docs/api/qiskit/1.4/qiskit.primitives.Sampler) reference.\n",
     "  - Learn how to run on a QPU in the [Run](./execute-on-hardware) step of the Qiskit patterns workflow.\n",
