--- a/docs/guides/plot-quantum-states.ipynb
+++ b/docs/guides/plot-quantum-states.ipynb
@@ -478,7 +478,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  - Need to refresh your quantum information knowledge? Check out the [Basics of quantum information](https://learning.quantum.ibm.com/course/basics-of-quantum-information) course on IBM Quantum Learning.\n",
+    "  - Need to refresh your quantum information knowledge? Check out the [Basics of quantum information](/learning/courses/basics-of-quantum-information) course on IBM Quantum Learning.\n",
     "  - Read the [contributing guidelines](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) if you want to contribute to the open-source Qiskit SDK.\n",
     "</Admonition>"
    ]
