--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -293,8 +293,7 @@
     "    - Learn how to [Set the optimization level when using Qiskit Runtime.](./runtime-options-overview)\n",
     "    - Visit the [Transpile with pass managers](transpile-with-pass-managers) topic.\n",
     "    - For examples, see [Representing quantum computers.](./represent-quantum-computers)\n",
-    "    - Try the [Submit transpiled circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) tutorial.\n",
-    "    - Learn [how to transpile circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) as part of Qiskit Patterns workflows using Qiskit Runtime.\n",
+    "    - Learn [how to transpile circuits](/docs/tutorials/circuit-transpilation-settings) as part of the Qiskit patterns workflow using Qiskit Runtime.\n",
     "    - Review the [Transpile API documentation](/docs/api/qiskit/transpiler).\n",
     "</Admonition>"
    ]
