--- a/docs/guides/install-qiskit-source.mdx
+++ b/docs/guides/install-qiskit-source.mdx
@@ -150,5 +150,5 @@ pip install -r requirements-dev.txt
   - Read the [contributing guidelines](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) to contribute to the open-source Qiskit SDK.
   - Learn how to [build circuits](./map-problem-to-circuits).
   - [Run the Hello world program](/docs/tutorials/hello-world).
-  - Try a tutorial, such as [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm).
+  - Try a tutorial, such as [Grover's algorithm](/docs/tutorials/grovers-algorithm).
 </Admonition>
