--- a/docs/guides/addons.mdx
+++ b/docs/guides/addons.mdx
@@ -15,7 +15,7 @@ Approximate quantum compilation with tensor networks (AQC-Tensor) enables the co
 
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-aqc-tensor)
 - Read the [documentation.](/docs/guides/qiskit-addons-aqc)
-- Read the tutorial on using AQC to [improve Trotterized time evolution.](https://learning.quantum.ibm.com/tutorial/improved-trotterized-time-evolution-with-approximate-quantum-compilation)
+- Read the tutorial on using AQC to [improve Trotterized time evolution.](/docs/tutorials/approximate-quantum-compilation-for-time-evolution)
 
 ### Multi-product formulas
 
@@ -32,7 +32,7 @@ Operator backpropagation (OBP) reduces circuit depth by trimming operations from
 
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-obp)
 - Read the [documentation.](/docs/guides/qiskit-addons-obp)
-- Read the tutorial on using [OBP to improve expectation values.](https://learning.quantum.ibm.com/tutorial/improving-estimation-of-expectation-values-with-operator-backpropagation)
+- Read the tutorial on using [OBP to improve expectation values.](/docs/tutorials/operator-back-propagation)
 
 ### Circuit cutting
 
@@ -49,4 +49,4 @@ Sample-based quantum diagonalization (SQD) classically post-processes noisy quan
 
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-sqd)
 - Read the [documentation.](/docs/guides/qiskit-addons-sqd)
-- Read the tutorial on [improving energy estimation with SQD.](https://learning.quantum.ibm.com/tutorial/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd)
+- Read the tutorial on [Sample-based quantum diagonalization of a chemistry Hamiltonian.](/docs/tutorials/sample-based-quantum-diagonalization)
