--- a/docs/guides/qiskit-addons-obp-get-started.ipynb
+++ b/docs/guides/qiskit-addons-obp-get-started.ipynb
@@ -480,7 +480,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Read through the [OBP tutorial](https://learning.quantum.ibm.com/tutorial/improving-estimation-of-expectation-values-with-operator-backpropagation) on the IBM Quantum Learning Platform.\n",
+    "- Try the tutorial on using [OBP to improve expectation values.](/docs/tutorials/operator-back-propagation)\n",
     "</Admonition>"
    ]
   }
