--- a/docs/guides/native-gates.ipynb
+++ b/docs/guides/native-gates.ipynb
@@ -151,7 +151,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Read about basis gates in the [Represent quantum computers](./represent-quantum-computers#basis-gates) topic.\n",
-    "    - Apply your knowledge of basis gates to a [tutorial](https://learning.quantum.ibm.com/catalog/tutorials) in IBM Quantum Learning.\n",
+    "    - Apply your knowledge of basis gates to a [tutorial](/docs/tutorials).\n",
     "</Admonition>"
    ]
   }
