Made minor code changes for Qiskit 2.1, like efficient_su2, minor updates to PySCF.

--- a/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
@@ -484,7 +484,7 @@
    "id": "75bf2097-1a9c-48d5-8eff-393e0c9eb2f9",
    "metadata": {},
    "source": [
-    "There are many prefabricated ansatz choices in Qiskit. We will use ```EfficientSU2```."
+    "There are many prefabricated ansatz choices in Qiskit. We will use ```efficient_su2```."
    ]
   },
   {
@@ -513,10 +513,10 @@
    ],
    "source": [
     "# Pre-defined ansatz circuit and operator class for Hamiltonian\n",
-    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.circuit.library import efficient_su2\n",
     "\n",
     "# Note that it is more common to place initial 'h' gates outside the ansatz. Here we specifically wanted this layer structure.\n",
-    "ansatz = EfficientSU2(\n",
+    "ansatz = efficient_su2(\n",
     "    hamiltonian.num_qubits, su2_gates=[\"h\", \"rz\", \"y\"], entanglement=\"circular\", reps=1\n",
     ")\n",
     "num_params = ansatz.num_parameters\n",
@@ -530,7 +530,7 @@
    "id": "15394107-6589-4d06-b611-8fa641784b33",
    "metadata": {},
    "source": [
-    "Different ansätze will have different entangling structures and different rotation gates. The one shown here uses CNOT gates for entangling, and parametrized RY and RZ gates. Note the size of this parameter space; it means we must minimize the cost function over 8 variables. This can be scaled up, but not indefinitely. Running a similar problem on 4 qubits, using the default 3 reps for ```EfficientSU2``` yields 32 variational parameters."
+    "Different ansätze will have different entangling structures and different rotation gates. The one shown here uses CNOT gates for entangling, and parametrized RY and RZ gates. Note the size of this parameter space; it means we must minimize the cost function over 8 variables. This can be scaled up, but not indefinitely. Running a similar problem on 4 qubits, using the default 3 reps for ```efficient_su2``` yields 32 variational parameters."
    ]
   },
   {
@@ -976,7 +976,7 @@
     "\n",
     "The **ADAPT-VQE** (Adaptive Derivative-Assembled Pseudo-Trotter Variational Quantum Eigensolver) algorithm is an enhancement of the original VQE algorithm, designed to improve efficiency, accuracy, and scalability for quantum simulations, particularly in quantum chemistry.\n",
     "\n",
-    "The original VQE algorithm described throughout this lesson uses a predefined, fixed ansatz to approximate the ground state of the system. In our case, we used EfficientSU2, with a single repetition, using Y and RZ rotation gates.  Although the parameters in the RZ gates changed, the structure of this ansatz and the gates used did not change.\n",
+    "The original VQE algorithm described throughout this lesson uses a predefined, fixed ansatz to approximate the ground state of the system. In our case, we used `efficient_su2`, with a single repetition, using Y and RZ rotation gates.  Although the parameters in the RZ gates changed, the structure of this ansatz and the gates used did not change.\n",
     "\n",
     "ADAPT-VQE addresses the limitations of VQE through adaptive ansatz construction. Instead of starting with a fixed ansatz, ADAPT-VQE dynamically builds the ansatz iteratively. At each step, it selects the operator from a predefined pool (such as fermionic excitation operators) that has the largest gradient with respect to the energy. This ensures that only the most impactful operators are added, leading to a compact and efficient ansatz[\\[4-6\\]](#references). This approach can have several beneficial effects:\n",
     "\n",
