Standardize admon. about Functions being experimental

--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -8,7 +8,7 @@
     "# Optimization Solver: A Qiskit Function by Q-CTRL Fire Opal\n",
     "\n",
     "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan and Flex Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>"
    ]
   },
