--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -31,6 +31,10 @@
    "id": "13528739",
    "metadata": {},
    "source": [
+    "<Admonition type=\"note\" title=\"Note\">\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan and Flex Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "## Overview\n",
     "\n",
     "While quantum processing units have vastly improved in recent years, errors due to noise and imperfections in existing hardware remain a central challenge for quantum algorithm developers. As the field approaches utility-scale quantum computations that cannot be verified classically, solutions for canceling noise with guaranteed accuracy are becoming increasingly important. To overcome this challenge, Qedma has developed Quantum Error Suppression and Error Mitigation (QESEM), seamlessly integrated on IBM Quantum Platform as a [Qiskit Function](/docs/guides/functions).\n",
