--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -16,7 +16,7 @@
     "# Tensor-network error mitigation (TEM): A Qiskit Function by Algorithmiq\n",
     "\n",
     "<Admonition type=\"note\" title=\"Note\">\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan and Flex Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>"
    ]
   },
