add on-prem to functions docs in guides

--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -35,7 +35,7 @@
     "# HI-VQE Chemistry - A Qiskit Function by Qunova Computing\n",
     "\n",
     "<Admonition type=\"note\">\n",
-    "  Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan and Flex Plan users. They are in preview release status and subject to change.\n",
+    "  Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>"
    ]
   },
