replace old learning.quantum.com urls with new ones (#3395)
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -207,7 +207,7 @@
    "id": "78772993-d0da-4651-9211-706e86a59432",
    "metadata": {},
    "source": [
-    "For more information, see [N-local gates](/docs/api/qiskit/circuit_library#n-local-circuits) in the circuit library API documentation or take our [Variational algorithm design course](https://learning.quantum.ibm.com/course/variational-algorithm-design)."
+    "For more information, see [N-local gates](/docs/api/qiskit/circuit_library#n-local-circuits) in the circuit library API documentation or take the [Variational algorithm design course](/learning/courses/variational-algorithm-design) in IBM Quantum Learning."
    ]
   },
   {
@@ -477,7 +477,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  -  Learn advanced methods for creating circuits in the [Construct circuits](./construct-circuits) topic.\n",
-    "  -  See an example of circuits being used in the [Grover's Algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.\n",
+    "  -  See an example of circuits being used in the [Grover's Algorithm](/docs/tutorials/grovers-algorithm) tutorial.\n",
     "  -  Review the [circuit library API](/docs/api/qiskit/circuit_library) reference.\n",
     "</Admonition>"
    ]
