--- a/docs/guides/simulate-with-qiskit-sdk-primitives.ipynb
+++ b/docs/guides/simulate-with-qiskit-sdk-primitives.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26c2809e-c8b4-4e25-996e-c41f72723b1b",
+   "id": "b820ca5f-60cc-41c7-98db-4b41df4534cc",
    "metadata": {
     "tags": [
      "version-info"
@@ -500,7 +500,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  - For higher-performance simulation that can handle larger circuits, or to incorporate noise models into your simulation, see [Exact and noisy simulation with Qiskit Aer primitives](simulate-with-qiskit-aer).\n",
-    "  - Learn how to use [IBM Quantum Composer](/docs/guides/composer) for simulation.\n",
+    "  - To learn how to use Quantum Composer for simulation, see the [IBM Quantum Composer](/docs/guides/composer) guide.\n",
     "  - Read the [Qiskit Estimator API](/docs/api/qiskit/1.4/qiskit.primitives.Estimator) reference.\n",
     "  - Read the [Qiskit Sampler API](/docs/api/qiskit/1.4/qiskit.primitives.Sampler) reference.\n",
     "  - Learn how to run on a QPU in the [Run](./execute-on-hardware) step of the Qiskit patterns workflow.\n",
