--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -230,5 +230,5 @@ curl -X 'GET' \
   -  [Overview of available plans.](plans-overview)
   -  [Configure the Qiskit SDK locally.](configure-qiskit-local)
   -  Follow the steps in [Hello world](/docs/tutorials/hello-world) to write and run a quantum program.
-  -  Try a [tutorial](https://learning.quantum.ibm.com/catalog/tutorials) in IBM Quantum Learning.
+  -  Try a [tutorial](/docs/tutorials).
 </Admonition>
