--- a/docs/guides/interoperate-qiskit-qasm2.ipynb
+++ b/docs/guides/interoperate-qiskit-qasm2.ipynb
@@ -413,7 +413,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Learn how to generate OpenQASM code using [IBM Quantum Composer](/docs/guides/composer).\n",
+    "    - Learn how to generate OpenQASM code in the [IBM Quantum Composer](/docs/guides/composer) guide.\n",
     "    - See the [OpenQASM 2 Qiskit API](/docs/api/qiskit/qasm2) reference.\n",
     "    - Review the [Verify your program](./debugging-tools) topic.\n",
     "    - Visit the [OpenQASM Live Specification](https://openqasm.com/).\n",
