--- a/docs/guides/introduction-to-qasm.mdx
+++ b/docs/guides/introduction-to-qasm.mdx
@@ -45,7 +45,7 @@ c = measure q; // measure quantum register
 
 <Admonition type="tip" title="Recommendations">
 
-- Learn how to generate OpenQASM code using [IBM Quantum Composer](/docs/guides/composer).
+- Learn how to generate OpenQASM code in the [IBM Quantum Composer](/docs/guides/composer) guide.
 - Review the [OpenQASM 3 feature table](qasm-feature-table).
 - Read the [OpenQASM 3 Qiskit API](/docs/api/qiskit/qasm3) reference.
 - Read the [OpenQASM 2 Qiskit API](/docs/api/qiskit/qasm2) reference.
