--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -2107,7 +2107,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Read through the [SQD tutorial](https://learning.quantum.ibm.com/tutorial/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd) on IBM Quantum Learning\n",
+    "    - Read through the [SQD tutorial](/docs/tutorials/sample-based-quantum-diagonalization) on IBM Quantum Learning\n",
     "</Admonition>"
    ]
   }
