--- a/learning/courses/quantum-chem-with-vqe/geometry.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/geometry.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "dbd10d0c-feb1-4a86-9bd9-b61101a08b95",
    "metadata": {},
    "outputs": [],
@@ -114,19 +114,19 @@
     "        symmetry=\"Dooh\",\n",
     "    )\n",
     "\n",
-    "    #mf = scf.RHF(mol)\n",
-    "    #mx = mcscf.CASCI(mf, ncas=2, nelecas=(1, 1))\n",
-    "    #mx.kernel()\n",
+    "    # mf = scf.RHF(mol)\n",
+    "    # mx = mcscf.CASCI(mf, ncas=2, nelecas=(1, 1))\n",
+    "    # mx.kernel()\n",
     "\n",
     "    mf = scf.RHF(mol)\n",
     "    mf.kernel()\n",
     "    if not mf.converged:\n",
-    "        raise RuntimeError(f\"SCF did not converge for distance {distx}\")\n",
+    "        raise RuntimeError(f\"SCF did not converge for distance {x}\")\n",
     "\n",
     "    mx = mcscf.CASCI(mf, ncas=2, nelecas=(1, 1))\n",
     "    casci_energy = mx.kernel()\n",
     "    if casci_energy is None:\n",
-    "        raise RuntimeError(f\"CASCI failed for distance {distx}\")\n",
+    "        raise RuntimeError(f\"CASCI failed for distance {x}\")\n",
     "\n",
     "    # Other variables that might come in handy:\n",
     "    # active_space = range(mol.nelectron // 2 - 1, mol.nelectron // 2 + 1)\n",
@@ -277,6 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fa07518f-a2c0-4f7a-b344-8d9576427478",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,6 +298,7 @@
     "# To run on a simulator:\n",
     "# -----------\n",
     "from qiskit_aer import AerSimulator\n",
+    "\n",
     "backend_sim = AerSimulator.from_backend(backend)"
    ]
   },
@@ -332,7 +334,7 @@
     "        ConstrainedReschedule(\n",
     "            acquire_alignment=target.acquire_alignment,\n",
     "            pulse_alignment=target.pulse_alignment,\n",
-    "            target=target\n",
+    "            target=target,\n",
     "        ),\n",
     "        PadDynamicalDecoupling(\n",
     "            target=target,\n",
@@ -340,7 +342,7 @@
     "            pulse_alignment=target.pulse_alignment,\n",
     "        ),\n",
     "    ]\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -804,13 +806,6 @@
     "print(qiskit.version.get_version_info())\n",
     "print(qiskit_ibm_runtime.version.get_version_info())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -830,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3"
   },
   "title": "Molecular geometry"
  },
