Remove dual-platform admonitions and update Functions admonitions (#3462)
Also in this PR: standardizing Functions admonitions re: experimental
and available to both Premium, Flex, and On-Prem.

Closes #3199

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -15,6 +15,10 @@
    "id": "36a8cc7a-179a-45f7-b28e-a2b4bbeaabd3",
    "metadata": {},
    "source": [
+    "<Admonition type=\"note\" title=\"Note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "*Usage estimate: Approximately 55 minutes on ibm_torino. (NOTE: This is an estimate only. Actual runtime may vary.)*"
    ]
   },
