--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -5,20 +5,7 @@
    "id": "dde95705",
    "metadata": {},
    "source": [
-    "# IBM Circuit function\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\" title=\"Notes\">\n",
-    "* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/ibm-circuit-function)\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\" title=\"Notes\">\n",
-    "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/ibm-circuit-function)\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# IBM Circuit function"
    ]
   },
   {
@@ -36,6 +23,10 @@
    "id": "64b16815",
    "metadata": {},
    "source": [
+    "<Admonition type=\"note\" title=\"Note\">\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "## Overview\n",
     "\n",
     "The IBM&reg; Circuit function takes [abstract PUBs](./primitive-input-output) as inputs, and returns mitigated expectation values as outputs. This circuit function includes an automated and customized pipeline to enable researchers to focus on algorithm and application discovery."
