--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -7,24 +7,12 @@ description: How to manage costs of running jobs on QPUs when using the Standard
 # Manage cost on the Standard Plan
 
 <CloudContent>
-<Admonition type="note" title="Notes">
-* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/manage-cost)
+<Admonition type="note" title="Note">
 * The information in this topic only applies to those who are using the Standard Plan for Qiskit Runtime.  There are no costs associated with the IBM Quantum Platform Open Plan.
 </Admonition>
 
 This guide describes how to set a cost limit or instance limit.  You can also manage cost by [minimizing a workload's quantum time.](minimize-time)
-
 </CloudContent>
-<LegacyContent>
-<Admonition type="note" title="Notes">
-* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/manage-cost)
-* The information in this topic only applies to those who are using the Standard Plan for Qiskit Runtime on IBM Cloud.  There are no costs associated with the IBM Quantum Platform Open Plan.
-</Admonition>
-
-The IBM Cloud&reg; Quantum Standard plan is not free, except when running jobs on simulators. Use the information in this topic to help you understand how much you’re paying and how to limit your costs.
-
-Learn how to limit your costs when using the Standard Plan on IBM Quantum Platform.
-</LegacyContent>
 
 The _cost limit_ or _instance limit_ refers to the total cost of all jobs run with this instance since it was created, and it will always be greater than or equal to the total cost. After the instance reaches the specified number of total seconds, no further jobs can be run and no more cost is incurred.
 
