--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -7,16 +7,9 @@
    "source": [
     "# Performance Management: A Qiskit Function by Q-CTRL Fire Opal\n",
     "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\" title=\"Notes\">\n",
-    "* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/q-ctrl-performance-management)\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
     "<CloudContent>\n",
-    "<Admonition type=\"note\" title=\"Notes\">\n",
-    "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/q-ctrl-performance-management)\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
+    "<Admonition type=\"note\" title=\"Note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "</CloudContent>"
    ]
