--- a/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb
+++ b/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb
@@ -16,6 +16,10 @@
    "id": "a6f69b77",
    "metadata": {},
    "source": [
+    "<Admonition type=\"note\" title=\"Note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "*Usage estimate (NOTE: This is an estimate only. Your runtime may vary.)*\n",
     "\n",
     "* 5 minutes QPU time on ibm\\_strasbourg\n",
