minor fixes in qsc course
Signed-off-by: Nigel Jones <jonesn@uk.ibm.com>

--- a/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
+++ b/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
@@ -64,9 +64,7 @@ Each lesson will include:
 
 ## Running the Python examples
 
-The Python code has been run already so that readers browsing the text can see the results without additional steps. However, and in particular for those with an interest in software development, you are encouraged to run these examples yourself. You can also experiment with input parameters and explore the principles in an experimental way.
-
-When you run a Python cell for the first time, you will be prompted to log in to IBM Quantum&reg;.
+The Python code has been run already so that readers browsing the text can see the results without additional steps. However, and in particular for those with an interest in software development, you are encouraged to run these examples yourself using a [Jupyter notebook](https://jupyter.org/). You can also experiment with input parameters and explore the principles in an experimental way.
 
 You should run each Python cell in order, from the beginning of the notebook. Later cells are typically dependent on earlier ones to set up libraries, variables, etc. Each cell has been written to produce some output after execution.
 
@@ -86,8 +84,3 @@ Before starting, please take a moment to complete our [pre-course survey](https:
 
 A presentation has been provided (see **Helpful Materials** on the course overview) that reviews the contents
 covered in this course. You may wish to download so you can refer to it at a later point in time. 
-
-Further courses are being developed which will follow on from this introduction and will cover topics including:
-- Using quantum-safe encryption in practice
-- Open-source libraries
-- IBM product offerings that can help
